# karton

./: .flatpak-manifest.json  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  Main.qml  README.md  REUSE.toml  VmConfigDialog.qml  backendengine.cpp  backendengine.h  configlists.cpp  configlists.h  karton.desktop  kartonerror.cpp  kartonerror.h  kartonmachine.cpp  kartonmachine.h  main.cpp  org.kde.karton.desktop  resources.qrc
cmake/: FindGlib.cmake  FindLibosinfo.cmake  FindLibvirt.cmake  FindSpiceglib.cmake
img/: gallery_install.png.license  karton_logo.png.license  karton_logo.svg.license
src/: CMakeLists.txt  Messages.sh  commandrunner.cpp  commandrunner.h  domain.cpp  domain.h  domainconfig.cpp  domainconfig.h  domaininstaller.cpp  domaininstaller.h  domainviewer.cpp  domainviewer.h  domainxmlreader.cpp  domainxmlreader.h  evdev_to_xtkbd_map.c  evdev_to_xtkbd_map.h  karton.cpp  karton.h  libvirteventloop.cpp  libvirteventloop.h  libvirtmonitor.cpp  libvirtmonitor.h  main.cpp  osinfoconfig.cpp  osinfoconfig.h  vmlistmodel.cpp  vmlistmodel.h
src/qml/: InstallationDialog.qml  Main.qml  VMListPage.qml  VMPage.qml  VMViewerWindow.qml
